manifests/argocd/vcluster/eks/vcluster-vs-e.yaml
###
# vClusters accessing point e
###
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-e-vs
  namespace: team-e
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-e"
    route:
    - destination:
        host: vcluster-e
        port:
          number: 443
